# 2-1-research

./: .gitignore  AGENT_TASK.md  LICENSE  README.md  REPRODUCIBILITY.md  advanced_evaluation.py  answer.md  compare_frames.py  data_loader.py  dtcwt_cuda.py  dtcwt_processor.py  edge_analysis.py  evaluate_metrics.py  issue and proposed solution.md  main_pipeline.py  profile_results.txt  proposed.md  pyproject.toml  read.md  run_noise_experiment.py  run_rd_curve.py  stderr.txt  test.py  test_caching_math.py  visualize_residuals.py
.github/workflows/: ci.yml
data/sample/: test_5frames.y4m
outputs/noise_experiment/: raw_data_akiyo_s0.csv  raw_data_akiyo_s10.csv  raw_data_akiyo_s5.csv  raw_data_foreman_s0.csv  raw_data_foreman_s10.csv  raw_data_foreman_s15.csv  raw_data_foreman_s5.csv  summary_bd_rates.csv
outputs/noise_experiment - 복사본/: raw_data_akiyo_s15.csv  summary_reliable_metrics.csv
outputs_noisy/: raw_data_foreman.csv
outputs_v2/: raw_data_foreman.csv
outputs_v3/: raw_data_foreman.csv
outputspaper_full/: raw_data_akiyo_s0.csv  raw_data_akiyo_s10.csv  raw_data_akiyo_s15.csv  raw_data_akiyo_s5.csv  raw_data_foreman_s0.csv  raw_data_foreman_s10.csv  raw_data_foreman_s15.csv  raw_data_foreman_s5.csv  raw_data_mobile_s0.csv  raw_data_mobile_s10.csv  raw_data_mobile_s15.csv  raw_data_mobile_s5.csv  raw_data_stefan_s0.csv  raw_data_stefan_s10.csv  raw_data_stefan_s15.csv  raw_data_stefan_s5.csv  summary_bd_rates.csv  summary_reliable_metrics.csv
paper/: form.tex  korean_paper.aux  korean_paper.out  main.aux  main.out  main.tex
scripts/: patch_missing_metrics.py  recompute_noise_metrics.py  redraw_noise_plots.py  run_noise_experiment.py  run_rd_curve.py  visualize_residuals.py
src/dtcwt_video/: __init__.py  (+10 more)
tests/: conftest.py  test_caching.py  test_experiment_analysis.py  test_noise_experiment_smoke.py  test_rate_aware.py  test_transform.py
(+1 files in other folders)
