[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dtcwt>=0.14.0",
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pyopencl>=2026.1.2",
    "torch>=2.0.0",
    "y4m>=1.1.1",
    "yuvio>=1.6",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
